fix: focus indicator not visible

--- a/portfolio/src/components/Header/Header.module.sass
+++ b/portfolio/src/components/Header/Header.module.sass
@@ -30,7 +30,7 @@
     height: 70vh
     width: 70vh
     transform: translate(-50%, -50%)
-    z-index: 999
+    z-index: 99
     overflow: visible
     opacity: 0
     @include mobile-and-small
